# fuzzylogic

./: Cargo.toml  README.md
src/: fuzzy_num.rs  lib.rs
src/fuzzy_num/: fuzzy_unit.rs
